# ai-pilot-rag

./: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
app/: backend_pre_start.py  main.py
app/api/: main.py
app/api/routes/: knowledge.py  tenant.py  utils.py
app/controllers/: general_knowledge_controllder.py  tenant_controller.py
app/core/: config.py  middleware.py  weaviate_client.py
app/core/ai_agents/: factory.py  openai_agent.py
app/models/: knowledge_models.py
app/tool/: ai_tool.py  s3.py  tenant.py  vectorDB_tool.py
app/utils/: helpers.py
scripts/: encrypt_decrypt_env.py
